@@ -4,6 +4,9 @@ XXX Planned XXX Release date: 14-Nov-2001
 
 Type/class unification and new-style classes
 
+- New-style classes can now have a __del__ method, which is called
+  when the instance is deleted (just like for classic classes).
+
 - Assignment to object.__dict__ is now possible, for objects that are
   instances of new-style classes that have a __dict__ (unless the base
   class forbids it).
